[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infolang-superagent"
dynamic = ["version"]
description = "InfoLang semantic memory behind a Superagent safety guard (redact-before-store, inject-scan-on-recall)."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "InfoLang", email = "engineering@infolang.ai" }]
keywords = ["infolang", "superagent", "guardrails", "safety", "pii", "semantic-memory", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "infolang>=0.2,<0.3",
  "superagent-ai>=0.0.23,<0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.urls]
Homepage = "https://infolang.ai"
Documentation = "https://docs.infolang.ai"
Source = "https://github.com/InfoLang-Inc/infolang-superagent"
Issues = "https://github.com/InfoLang-Inc/infolang-superagent/issues"

[tool.hatch.version]
path = "src/infolang_superagent/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/infolang_superagent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=infolang_superagent --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src/infolang_superagent"]
branch = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/infolang_superagent"]
